<resources>
    <string name="app_name">QrGeneratorAndScanner</string>
    <string name="generate">Generate</string>
    <string name="scan">Scan</string>
    <string name="give_some_text_here">Give some text here</string>
    <string name="download">Download</string>
    <string name="go_back">Go Back</string>
    <string name="name_of_image">Name of image</string>
    <string name="g">GoBack</string>
    <string name="qr_code_found">QR Code Found</string>
    <string name="copy">Copy</string>
    <string name="logo">Logo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="who_are_we">Who are we ?</string>
    <string name="user_logo">logo</string>
    <string name="curiosity">Curiosity</string>
    <string name="curiosity_description">Wait wait I am not the one who explored mars that was another
    Curiosity. We are more alike. But i explore the IT world instead🖥️.This Corp was found by Chary.I was named curiosity
    because it is the reason for our present and the source of our future❤️.</string>
    <string name="about_us">About Us</string>
</resources>