<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_800"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/generate"
        android:layout_width="297dp"
        android:layout_height="81dp"
        android:background="@drawable/cutom_gradient_button"
        android:fontFamily="@font/aclonica"
        android:text="@string/generate"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <Button
        android:id="@+id/scan"
        android:layout_width="297dp"
        android:layout_height="81dp"
        android:background="@drawable/cutom_gradient_button"
        android:fontFamily="@font/aclonica"
        android:text="@string/scan"
        android:textSize="27sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="367dp"
        android:layout_height="264dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079"
        app:srcCompat="@drawable/qr_logo" />

    <Button
        android:id="@+id/about_us"
        android:layout_width="150dp"
        android:layout_height="57dp"
        android:background="@drawable/text_button"
        android:drawableEnd="@drawable/ic_baseline_people_24"
        android:fontFamily="@font/aclonica"
        android:paddingHorizontal="15dp"
        android:text="@string/about_us"
        android:textColor="@color/teal_700"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918" />

    <TextView
        android:id="@+id/water_mark"
        android:layout_width="121dp"
        android:layout_height="48dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/curiosity"
        android:textColor="#616161"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />
</androidx.constraintlayout.widget.ConstraintLayout>